--- a/package.json
+++ b/package.json
@@ -8,21 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "codemirror": "^5.65.16",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
+    "lodash": "^4.17.21",
+    "nanoid": "^5.0.5",
+    "splitpanes": "^2.4.1",
+    "v-contextmenu": "^2.9.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-runtime-helpers": "^1.1.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
